[tool.poetry]
name = "yupiwrap"
version = "0.1.1"
description = ""
authors = [
    "Gustavo Viera-López <gvieralopez@gmail.com>",
    "Alfredo Reyes <areyes@fisica.uh.cu>",
    "Jorge Morgado <jorge.morgadov@gmail.com>",
    "Ernesto Altshuler <ealtshuler@fisica.uh.cu>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
yupi = "^0.6.1"
traja = "^0.2.8"
tracktable = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
